err/slackbot-ce.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slackbot_ce'...
Listing './lib/python3.5/site-packages/slackbot_ce/chris'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/aidan'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/al_kareem'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/alec'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/alex'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/alexander'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/coy'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/evelyn'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/hadley'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/lily'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/qiuqiu'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/stephon'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/taixi'...
Listing './lib/python3.5/site-packages/slackbot_ce/code_em/zb'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/baron'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/elliot'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/kaleb'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/nate'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/owen'...
Listing './lib/python3.5/site-packages/slackbot_ce/homeschool/vivian'...
Listing './lib/python3.5/site-packages/slackbot_ce/joe'...
Compiling './lib/python3.5/site-packages/slackbot_ce/joe/temp_humidity.py'...
***   File "./lib/python3.5/site-packages/slackbot_ce/joe/temp_humidity.py", line 23
    print temp_f
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slackbot_ce/matthew'...
Listing './lib/python3.5/site-packages/slackbot_ce/wray'...
Compiling './lib/python3.5/site-packages/slackbot_ce/wray/temp_humidity.py'...
***   File "./lib/python3.5/site-packages/slackbot_ce/wray/temp_humidity.py", line 23
    print temp_f
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slackbot_ce-0.2.515853183.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
